--- a/eeeee.html
+++ b/eeeee.html
@@ -8,19 +8,10 @@
 </head>
 <body>
     <h3>Video 1</h3>
-    <video width="400" controls>
-        <source src="vid/mov_bbb.mp4" type="video/mp4">
-        Your browser does not support HTML video.
-    </video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/6bFOYDUHHNA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h3>Video 2</h3>
-    <video width="400" controls>
-        <source src="vid/mov_bbb.mp4" type="video/mp4">
-        Your browser does not support HTML video.
-    </video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CeLC7ClECwk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h3>Video 3</h3>
-    <video width="400" controls>
-        <source src="vid/mov_bbb.mp4" type="video/mp4">
-        Your browser does not support HTML video.
-    </video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/n_6m4-yfSig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
